Feat: creates topic listing resource - it is possible to list all posts - filter by year of creation - filter by course name - filter by course name and year of creation

--- a/challenge/src/main/resources/application.properties
+++ b/challenge/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
