--- a/challenge/src/main/resources/application.properties
+++ b/challenge/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/forum_alura
 spring.datasource.username=root
 spring.datasource.password=17213103
-
 spring.data.web.pageable.page-parameter=pagina
 spring.data.web.pageable.size-parameter=size
 spring.data.web.sort.sort-parameter=sort
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 server.error.include-stacktrace=never
-
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
+api.security.jwt.secret=123456
